// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENTS/Loader ColorPrimary smoke-test 1`] = `
<svg viewbox="0 0 24 30"
     class="loader loader--primary"
>
  <rect x="0"
        y="10"
        class="loader__rect"
  >
    <animate attributename="opacity"
             attributetype="XML"
             values="0.2; 1; .2"
             begin="0s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
    <animate attributename="height"
             attributetype="XML"
             values="10; 20; 10"
             begin="0s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
    <animate attributename="y"
             attributetype="XML"
             values="10; 5; 10"
             begin="0s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
  </rect>
  <rect x="8"
        y="10"
        class="loader__rect"
  >
    <animate attributename="opacity"
             attributetype="XML"
             values="0.2; 1; .2"
             begin="0.15s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
    <animate attributename="height"
             attributetype="XML"
             values="10; 20; 10"
             begin="0.15s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
    <animate attributename="y"
             attributetype="XML"
             values="10; 5; 10"
             begin="0.15s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
  </rect>
  <rect x="16"
        y="10"
        class="loader__rect"
  >
    <animate attributename="opacity"
             attributetype="XML"
             values="0.2; 1; .2"
             begin="0.3s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
    <animate attributename="height"
             attributetype="XML"
             values="10; 20; 10"
             begin="0.3s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
    <animate attributename="y"
             attributetype="XML"
             values="10; 5; 10"
             begin="0.3s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
  </rect>
</svg>
`;

exports[`COMPONENTS/Loader ColorSecondary smoke-test 1`] = `
<svg viewbox="0 0 24 30"
     class="loader loader--secondary"
>
  <rect x="0"
        y="10"
        class="loader__rect"
  >
    <animate attributename="opacity"
             attributetype="XML"
             values="0.2; 1; .2"
             begin="0s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
    <animate attributename="height"
             attributetype="XML"
             values="10; 20; 10"
             begin="0s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
    <animate attributename="y"
             attributetype="XML"
             values="10; 5; 10"
             begin="0s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
  </rect>
  <rect x="8"
        y="10"
        class="loader__rect"
  >
    <animate attributename="opacity"
             attributetype="XML"
             values="0.2; 1; .2"
             begin="0.15s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
    <animate attributename="height"
             attributetype="XML"
             values="10; 20; 10"
             begin="0.15s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
    <animate attributename="y"
             attributetype="XML"
             values="10; 5; 10"
             begin="0.15s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
  </rect>
  <rect x="16"
        y="10"
        class="loader__rect"
  >
    <animate attributename="opacity"
             attributetype="XML"
             values="0.2; 1; .2"
             begin="0.3s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
    <animate attributename="height"
             attributetype="XML"
             values="10; 20; 10"
             begin="0.3s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
    <animate attributename="y"
             attributetype="XML"
             values="10; 5; 10"
             begin="0.3s"
             dur="0.6s"
             repeatcount="indefinite"
    >
    </animate>
  </rect>
</svg>
`;
